--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
+  "homepage" : "https://cnqinglin.github.io/react-demo-2/build",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
